--- a/assets/app.css
+++ b/assets/app.css
@@ -529,10 +529,22 @@ svg path {
   background-color: rgba(255, 255, 255, 0.2);
 }
 
+.light .plain.hover,
+.light .song.hover,
+.light .album.hover {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
 .dark .plain.selected,
 .dark .song.selected,
 .dark .album.selected {
   background-color: rgba(0, 0, 0, 0.2);
+}
+
+.dark .plain.hover,
+.dark .song.hover,
+.dark .album.hover {
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .album {
@@ -643,8 +655,23 @@ svg path {
 
 .song-playingicon {
   margin: 0;
+  width: 0;
+  height: 0;
+  transition: width 0.1s 0s ease, height 0.1s 0s ease;
+}
+
+.hover .song-playingicon,
+.playing .song-playingicon {
   width: 22px;
   height: 22px;
+}
+
+.hover .song-playingicon {
+  opacity: 0.6;
+}
+
+.playing .song-playingicon {
+  opacity: 1;
 }
 
 .song-title {
