--- a/assets/app.css
+++ b/assets/app.css
@@ -641,16 +641,17 @@ svg path {
 }
 
 .plain-key {
-  margin: 8px 4px;
+  margin: 4px;
   font-size: 20px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  line-height: 1.55;
 }
 
 .song {
   align-items: center;
-  padding: 8px 4px;
+  padding: 4px;
 }
 
 .song-playingicon {
@@ -679,7 +680,7 @@ svg path {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  line-height: 23px;
+  line-height: 1.55;
 }
 
 .song-artist {
