--- a/assets/app.css
+++ b/assets/app.css
@@ -829,31 +829,18 @@ svg path {
   stroke-opacity: 0.5;
 }
 
+.system-box {
+  width: 100%;
+  height: 100%;
+}
+
 @media (orientation: landscape) {
   .system-box {
     display: flex;
-    width: 100%;
-    height: 100%;
   }
 
   .system-nav {
     width: 25%;
-  }
-
-  .system-articles {
-    width: 75%;
-  }
-}
-
-@media (orientation: portrait) {
-  .system-box {
-    width: 100%;
-    height: 100%;
-  }
-}
-
-@media (orientation: landscape) {
-  .system-nav {
     display: flex;
     padding: .20rem 0;
     flex-direction: column;
@@ -866,7 +853,6 @@ svg path {
     text-align: left;
     padding: 0 .20rem;
     margin: 0 .10rem;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   }
 
   .light .system-nav-item {
@@ -890,6 +876,10 @@ svg path {
     background-color: #e0e0e0;
     color: #404040;
   }
+
+  .system-articles {
+    width: 75%;
+  }
 }
 
 @media (orientation: portrait) {
@@ -907,7 +897,7 @@ svg path {
     box-sizing: border-box;
     border-style: solid none solid solid;
     border-width: .03rem;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    height: .40rem;
   }
 
   .light .system-nav-item {
@@ -939,6 +929,10 @@ svg path {
   .dark .system-nav-item.on {
     background-color: #e0e0e0;
     color: #404040;
+  }
+
+  .system-articles {
+    height: calc(100% - .4rem);
   }
 }
 
