--- a/assets/app.css
+++ b/assets/app.css
@@ -29,6 +29,11 @@ button {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+button:hover,
+button:active {
+  outline: 0;
+}
+
 li,
 ol {
   list-style-type: none;
@@ -52,7 +57,9 @@ header {
   width: 100%;
   top: 0;
   height: 44px;
+  box-sizing: border-box;
   height: calc(44px + constant(safe-area-inset-top));
+  padding: constant(safe-area-inset-top) 0 0;
 }
 
 .tab {
@@ -338,9 +345,7 @@ svg path {
 .header-items {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  align-content: space-around;
-  margin: constant(safe-area-inset-top) 0 0;
+  margin: 0;
   padding: 0 10px;
   width: 100%;
   height: 44px;
@@ -348,40 +353,27 @@ svg path {
 }
 
 .header-item {
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 32px;
   height: 32px;
 }
 
 .header-item:first-of-type {
-  margin: 0;
+  margin: 0 auto 0 0;
 }
 
 .header-item:nth-of-type(n+2) {
   margin: 0 0 0 10px;
 }
 
-.header-item:hover,
-.header-item:active {
-  outline: 0;
-}
-
-.header-iconlabel {
-  flex: 1 1 auto;
-}
-
 .header-item-iconlabel {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  width: 100%;
 }
 
 .header-item-icon {
-  width: auto;
   height: 32px;
   stroke-width: 16;
   transition: width 0.2s 0s ease, height 0.2s 0s ease;
@@ -393,15 +385,13 @@ svg path {
 
 .header-item:active .header-item-icon,
 .header-item.active .header-item-icon {
-  width: auto;
   height: 28px;
 }
 
 .header-item-label {
   flex: 1 1 auto;
-  width: 40px;
   margin: 0 4px;
-  font-size: 16px;
+  font-size: 17px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
