--- a/assets/app.css
+++ b/assets/app.css
@@ -117,16 +117,19 @@ footer {
   }
 
   .view-system .system,
-  .view-list .list,
   .view-main .main {
     display: flex;
   }
 
-  .view-main .list,
+  .view-list .lists {
+    display: block;
+  }
+
+  .view-main .lists,
   .view-main .system,
   .view-list .main,
   .view-list .system,
-  .view-system .list,
+  .view-system .lists,
   .view-system .main {
     display: none;
   }
@@ -139,20 +142,23 @@ footer {
 @media (orientation: landscape) {
   .view-list .main,
   .view-main .main,
-  .view-list .list,
-  .view-main .list,
   .view-system .system {
     display: flex;
   }
 
+  .view-main .lists,
+  .view-list .lists {
+    display: block;
+  }
+
   .view-main .system,
   .view-list .system,
-  .view-system .list,
+  .view-system .lists,
   .view-system .main {
     display: none;
   }
 
-  .list {
+  .lists {
     width: 50%;
   }
 
@@ -468,14 +474,31 @@ svg path {
   }
 }
 
+.lists {
+  position: relative;
+  overflow: hidden;
+}
+
 .list {
+  position: absolute;
   flex-flow: column nowrap;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.5s 0s ease;
+}
+
+.list.swipe {
+  transition: none;
 }
 
 .list-items {
   padding: 0 12px;
   margin: 0;
   box-sizing: border-box;
+}
+
+.list.hide {
+  display: none;
 }
 
 .albumlist.grid.list-items {
