--- a/assets/app.css
+++ b/assets/app.css
@@ -320,6 +320,10 @@ svg path {
   margin: 0 0 0 10px;
 }
 
+.view-playing .header-main {
+  display: none;
+}
+
 .header-item-iconlabel {
   display: flex;
   flex-flow: row nowrap;
@@ -1615,11 +1619,11 @@ svg path {
 }
 
 .light .modal-window {
-  background-color: rgba(255,255,255,0.4);
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
 .dark .modal-window {
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-window-close {
