--- a/assets/app.css
+++ b/assets/app.css
@@ -695,6 +695,7 @@ button:hover {
   width: 70%;
   height: 70%;
   flex: 1 0 auto;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .main-cover.circled {
